refactor(nodes): 优化节点代码结构和类型安全
- 使用模式匹配简化实体列表类型转换逻辑
- 移除不必要的变量初始化并修复潜在空指针异常
- 替换传统的if-else链为现代switch表达式提高可读性
- 更新集合操作方法调用以使用更合适的API
- 清理无用的导入语句减少代码冗余